--- a/cvat/apps/engine/static/engine/stylesheet.css
+++ b/cvat/apps/engine/static/engine/stylesheet.css
@@ -409,7 +409,7 @@
     text-align: center;
 }
 
-#shapeLabelSelector, #shapeModeSelector, #shapeTypeSelector, polyShapeSizeWrapper {
+#shapeLabelSelector, #shapeModeSelector, #shapeTypeSelector, #polyShapeSizeWrapper, #outOfImageWrapper {
     width: 80%;
     margin-left: auto;
     margin-top: 2%;
