Allow out of image shape creation (#6)
* Allow out of image shape creation

* Address code review comments

* Fix copy-paste not working with out-of-bounds annotations

* Fix misleading variable name

* Simplify clamp() calls

* Fix box by 4 points not working properly

Co-authored-by: Alexander Gerbik <alexg@daedalean.ai>

--- a/cvat/apps/engine/static/engine/stylesheet.css
+++ b/cvat/apps/engine/static/engine/stylesheet.css
@@ -409,7 +409,7 @@
     text-align: center;
 }
 
-#shapeLabelSelector, #shapeModeSelector, #shapeTypeSelector, polyShapeSizeWrapper {
+#shapeLabelSelector, #shapeModeSelector, #shapeTypeSelector, #polyShapeSizeWrapper, #clipToFrameWrapper {
     width: 80%;
     margin-left: auto;
     margin-top: 2%;
