--- a/cvat/apps/engine/templates/engine/annotation.html
+++ b/cvat/apps/engine/templates/engine/annotation.html
@@ -459,6 +459,10 @@
             <label for="polyShapeSize" class="regular h2"> Poly Shape Size: </label>
             <input id="polyShapeSize" type="text" value="" class="regular h2" style="width: 30%; margin-top: 1%;" placeholder="0-100"/>
         </div>
+        <div id="clipToFrameWrapper">
+            <label for="clipToFrameCheckbox" class="regular h2"> Clip to frame:  </label>
+            <input type="checkbox" id="clipToFrameCheckbox" class="regular h2" checked="checked" style="width: 30%; margin-top: 1%;"/>
+        </div>
     </div>
     <div id="aamMenu" class="hidden">
         <label class="regular h1"> AAM Mode </label>
