Move onlyMine button from JobListComponent to TopBarComponent

--- a/cvat-ui/src/components/task-page/styles.scss
+++ b/cvat-ui/src/components/task-page/styles.scss
@@ -75,6 +75,10 @@
     margin-bottom: 10px;
 }
 
+.cvat-task-top-bar div:first-child {
+  margin-right: auto;
+}
+
 .cvat-task-preview-wrapper {
     display: flex;
     justify-content: flex-start;
