--- a/cvat-ui/src/styles.scss
+++ b/cvat-ui/src/styles.scss
@@ -18,6 +18,10 @@ hr {
     margin: 10% 25%;
 }
 
+.cvat-text-color {
+    color: $text-color;
+}
+
 .cvat-title {
     font-weight: 400;
     font-size: 21px;
