--- a/cvat-ui/src/components/task-page/styles.scss
+++ b/cvat-ui/src/components/task-page/styles.scss
@@ -70,6 +70,10 @@
     }
 }
 
+.validation-report-header div:nth-child(2) {
+  margin-left: auto;
+}
+
 .cvat-task-top-bar {
     margin-top: 20px;
     margin-bottom: 10px;
