--- a/cvat-ui/src/components/task-page/styles.scss
+++ b/cvat-ui/src/components/task-page/styles.scss
@@ -56,7 +56,7 @@
     }
 }
 
-.cvat-task-job-list, .validation-report-block {
+.cvat-task-job-list, .validation-report-block, .annotation-merger-block {
     width: 100%;
     height: auto;
     border: 1px solid $border-color-1;
@@ -70,8 +70,14 @@
     }
 }
 
-.validation-report-header div:nth-child(2) {
-    margin-left: auto;
+.validation-report-header, .annotation-merger-header {
+    div:nth-child(2) {
+        margin-left: auto;
+    }
+}
+
+.annotation-merger-block {
+    margin-bottom: 20px;
 }
 
 .cvat-task-top-bar {
@@ -104,10 +110,16 @@
     margin-left: 15px;
 }
 
-.ant-typography.cvat-jobs-header, .ant-typography.cvat-validation-header {
+.ant-typography.cvat-jobs-header,
+.ant-typography.cvat-validation-header,
+.ant-typography.annotation-merger-header-text {
     margin-bottom: 0px;
     font-size: 20px;
     font-weight: bold;
+}
+
+.annotation-merger-request-extra {
+    margin-top: 20px;
 }
 
 /* Pagination in center */
