--- a/cvat/apps/engine/templates/engine/annotation.html
+++ b/cvat/apps/engine/templates/engine/annotation.html
@@ -187,7 +187,7 @@
                         <div style="float: left;"> <label class="semiBold"> Color by: </label> </div>
                         <div style="float: left; margin-left: 10px;">
                             <label style="margin-right: 10px;"> Instance </label>
-                            <input type="radio" name="colorByRadio" id="colorByInstanceRadio" checked class="settingsBox"/>
+                            <input type="radio" name="colorByRadio" id="colorByInstanceRadio" class="settingsBox"/>
                         </div>
                         <div style="float: left; margin-left: 10px;">
                             <label style="margin-right: 10px;"> Group </label>
@@ -195,7 +195,7 @@
                         </div>
                         <div style="float: left; margin-left: 10px;">
                             <label style="margin-right: 10px;"> Label </label>
-                            <input type="radio" name="colorByRadio" id="colorByLabelRadio" class="settingsBox"/>
+                            <input type="radio" name="colorByRadio" id="colorByLabelRadio" checked class="settingsBox"/>
                         </div>
                         <div style="float: left; margin-left: 50px;" title="Press Ctrl to switch">
                             <label style="display: none;">
