Add checkbox for disabling shapes sizes display

--- a/cvat/apps/engine/static/engine/stylesheet.css
+++ b/cvat/apps/engine/static/engine/stylesheet.css
@@ -263,6 +263,10 @@
     cursor: default;
 }
 
+body.hide-box-size .shapeText {
+    display: none;
+}
+
 .highlightedShape {
     fill-opacity: 0.2;
     stroke-opacity: 1;
