--- a/cvat/apps/engine/templates/engine/annotation.html
+++ b/cvat/apps/engine/templates/engine/annotation.html
@@ -205,6 +205,10 @@
                         </div>
                     </td>
                     <td style="width: auto;">
+                        <div style="float: left;"> <label for="show-shape-sizes" class="semiBold"> Show shapes sizes: </label> </div>
+                        <div style="float: left; margin-left: 1em;"> <input type="checkbox" checked id="show-shape-sizes"> </div>
+                    </td>
+                    <td style="width: auto;">
                         <div style="float: left;"> <label for="playerGammaRange" class="semiBold"> Gamma: </label> </div>
                         <div style="float: left; margin-left: 1em;"> <input type="range" min="0.1" max="1" value="1" step="0.05" id="playerGammaRange"> </div>
                     </td>
