Ui productivity enhancements (#32)
* Change default values for resetZoom and rotateAll

* Change default value for "Color by" to "by label" from "by instance"

* Add checkbox for disabling shapes sizes display

* Fix wrong filename generation (bug after refactoring)

* Make attributes default values "sticky"

--- a/cvat/apps/engine/templates/engine/annotation.html
+++ b/cvat/apps/engine/templates/engine/annotation.html
@@ -187,7 +187,7 @@
                         <div style="float: left;"> <label class="semiBold"> Color by: </label> </div>
                         <div style="float: left; margin-left: 10px;">
                             <label style="margin-right: 10px;"> Instance </label>
-                            <input type="radio" name="colorByRadio" id="colorByInstanceRadio" checked class="settingsBox"/>
+                            <input type="radio" name="colorByRadio" id="colorByInstanceRadio" class="settingsBox"/>
                         </div>
                         <div style="float: left; margin-left: 10px;">
                             <label style="margin-right: 10px;"> Group </label>
@@ -195,7 +195,7 @@
                         </div>
                         <div style="float: left; margin-left: 10px;">
                             <label style="margin-right: 10px;"> Label </label>
-                            <input type="radio" name="colorByRadio" id="colorByLabelRadio" class="settingsBox"/>
+                            <input type="radio" name="colorByRadio" id="colorByLabelRadio" checked class="settingsBox"/>
                         </div>
                         <div style="float: left; margin-left: 50px;" title="Press Ctrl to switch">
                             <label style="display: none;">
@@ -203,6 +203,10 @@
                                 <input type="checkbox" id="commonBordersCheckbox" class="settingsBox" style="margin-left: 10px; display: none;"/>
                             </label>
                         </div>
+                    </td>
+                    <td style="width: auto;">
+                        <div style="float: left;"> <label for="show-shape-sizes" class="semiBold"> Show shapes sizes: </label> </div>
+                        <div style="float: left; margin-left: 1em;"> <input type="checkbox" checked id="show-shape-sizes"> </div>
                     </td>
                     <td style="width: auto;">
                         <div style="float: left;"> <label for="playerGammaRange" class="semiBold"> Gamma: </label> </div>
