Implement rays creation

--- a/cvat/apps/engine/templates/engine/annotation.html
+++ b/cvat/apps/engine/templates/engine/annotation.html
@@ -463,6 +463,7 @@
             <option value="polyline" class="regular"> Polyline </option>
             <option value="points" class="regular"> Points </option>
             <option value="cuboid" class="regular"> Cuboid </option>
+            <option value="rays" class="regular"> Rays </option>
         </select>
         <div id="polyShapeSizeWrapper">
             <label for="polyShapeSize" class="regular h2"> Poly Shape Size: </label>
