--- a/cvat/apps/engine/templates/engine/annotation.html
+++ b/cvat/apps/engine/templates/engine/annotation.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="{% static 'engine/js/3rdparty/jquery-3.3.1.js' %}"></script>
     <script type="text/javascript" src="{% static 'engine/js/3rdparty/js.cookie.js' %}"></script>
     <script type="text/javascript" src="{% static 'engine/js/3rdparty/jquery.fullscreen.js' %}"></script>
+    <script type="text/javascript" src="{% static 'engine/js/3rdparty/graphic-primitives.min.js' %}"></script>
     {% for js_file in js_3rdparty %}
         <script type="text/javascript" src="{% static js_file %}"></script>
     {% endfor %}
@@ -462,6 +463,7 @@
             <option value="polyline" class="regular"> Polyline </option>
             <option value="points" class="regular"> Points </option>
             <option value="cuboid" class="regular"> Cuboid </option>
+            <option value="rays" class="regular"> Rays </option>
         </select>
         <div id="polyShapeSizeWrapper">
             <label for="polyShapeSize" class="regular h2"> Poly Shape Size: </label>
